--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "jest --watch --coverage",
-    "serve": "serve src/"
+    "serve": "serve src/",
+    "start": "parcel src/htmlSample.html"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
+    "parcel": "^2.8.3",
     "prettier": "^2.8.8",
     "serve": "^14.2.0",
     "ts-jest": "^29.1.0",
