--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
+    "jsdom": "^21.1.1",
     "parcel": "^2.8.3",
     "prettier": "^2.8.8",
     "serve": "^14.2.0",
